# LoggingUnit

./: CMakeLists.txt  README.md  command.sh
Logger/: CMakeLists.txt  log_settings.h.in  logger.h
tests/: CMakeLists.txt  tests.cpp
